cabal-version: 2.0
name:                dns-forwarder
version:             0.1.0.0
synopsis:            A DNS proxy
license:             BSD3
license-file:        LICENSE
author:              Anatoly Zaretsky
maintainer:          anatoly.zaretsky@gmail.com
copyright:           (c) 2022, Anatoly Zaretsky
category:            Network
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable dns-forwarder
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  ld-options:          -s
  build-depends:       base, network, bytestring, containers
  hs-source-dirs:      src
  default-language:    Haskell2010
